--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -36,7 +36,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
-                android:id="@+id/imgFavorite"
+                android:id="@+id/favImg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -50,9 +50,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:padding="4dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imgFavorite"
+                app:layout_constraintBottom_toBottomOf="@+id/favImg"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imgFavorite"
+                app:layout_constraintTop_toTopOf="@+id/favImg"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/txtItemName"
